# LigthScan

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: click_game.rs
src/: lib.rs  main.rs
src/engine/: error.rs  mod.rs  native.rs  trait.rs  types.rs  unity_il2cpp.rs  unity_mono.rs
src/engine/unreal/: implementation.rs  methods.rs  mod.rs  offsets.rs  scanner.rs  signatures.rs  structures.rs
src/gui/: app.rs  engine_view.rs  mod.rs  process_list.rs  results_view.rs  scan_view.rs
src/platform/: elevation.rs  mod.rs  module.rs  windows.rs
src/scanner/: filter.rs  memory.rs  mod.rs  process.rs  scan.rs  simd.rs
src/types/: mod.rs  scan_result.rs  value.rs
